--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 remote_theme: pages_themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: Sample Data Science App Website
-description: An Interactive Data App
+
+title: Xiaoman Li
+description: Sample website
+show_downloads: ["true"]
 
 
